Java 17 pattern matching for all instruction manipulations